# HSE_ASD_HyperLogLog_analysis

./: .gitignore  CMakeLists.txt  HashFuncGen.cpp  HashFuncGen.h  HyperLogLog.cpp  HyperLogLog.h  HyperLogLogMax.cpp  HyperLogLogMax.h  MurmurHash3.cpp  README.md  RandomStreamGen.cpp  RandomStreamGen.h  main.cpp
b_select_bitset_memory_benefit/: b_selection_vec_vs_bitset.csv
initial_b_selection/: b_selection2.csv
main data b = 10/: data_b=10_vec.csv  dispersion_data_b=10_vec.csv
upgraded bitset b = 13/: data_b=13_bitset.csv  dispersion_data_b=13_bitset.csv
